--- a/nvidia_setup.ipynb
+++ b/nvidia_setup.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "nvidia_setup",
+      "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN6Yryr3Le75k+XChIB3uYc",
+      "authorship_tag": "ABX9TyMJt0G6mM27O8LJib6Wa0nz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,133 +28,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vZcmKsFk-2uJ",
+        "id": "u57IcLSVDdpO",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!apt-get --purge remove cuda nvidia* libnvidia-*\n",
-        "!dpkg -l | grep cuda- | awk '{print $2}' | xargs -n1 dpkg --purge\n",
-        "!apt-get remove cuda-*\n",
-        "!apt autoremove\n",
-        "!apt-get update"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HNV3tii__MPp",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!wget https://developer.nvidia.com/compute/cuda/9.2/Prod/local_installers/cuda-repo-ubuntu1604-9-2-local_9.2.88-1_amd64 -O cuda-repo-ubuntu1604-9-2-local_9.2.88-1_amd64.deb\n",
-        "!dpkg -i cuda-repo-ubuntu1604-9-2-local_9.2.88-1_amd64.deb\n",
-        "!apt-key add /var/cuda-repo-9-2-local/7fa2af80.pub\n",
-        "!apt-get update\n",
-        "!apt-get install cuda-9.2"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PKsVCyZMABjy",
-        "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "e4c070ec-e823-4927-8787-d1596edda57b"
       },
       "source": [
         "!nvcc --version"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tza3UBolBCMW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!pip install git+git://github.com/andreinechaev/nvcc4jupyter.git"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "w9x7oQGoBE-_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "%load_ext nvcc_plugin"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EJtCH2SBBFZv",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "816315c8-5732-4a1f-da40-11b618cf235c"
-      },
-      "source": [
-        "%%cu\n",
-        "#include <stdio.h>\n",
-        "#include <stdlib.h>\n",
-        "__global__ void add(int *a, int *b, int *c) {\n",
-        "*c = *a + *b;\n",
-        "}\n",
-        "int main() {\n",
-        "int a, b, c;\n",
-        "// host copies of variables a, b & c\n",
-        "int *d_a, *d_b, *d_c;\n",
-        "// device copies of variables a, b & c\n",
-        "int size = sizeof(int);\n",
-        "// Allocate space for device copies of a, b, c\n",
-        "cudaMalloc((void **)&d_a, size);\n",
-        "cudaMalloc((void **)&d_b, size);\n",
-        "cudaMalloc((void **)&d_c, size);\n",
-        "// Setup input values  \n",
-        "c = 0;\n",
-        "a = 3;\n",
-        "b = 5;\n",
-        "// Copy inputs to device\n",
-        "cudaMemcpy(d_a, &a, size, cudaMemcpyHostToDevice);\n",
-        "  cudaMemcpy(d_b, &b, size, cudaMemcpyHostToDevice);\n",
-        "// Launch add() kernel on GPU\n",
-        "add<<<1,1>>>(d_a, d_b, d_c);\n",
-        "// Copy result back to host\n",
-        "cudaError err = cudaMemcpy(&c, d_c, size, cudaMemcpyDeviceToHost);\n",
-        "  if(err!=cudaSuccess) {\n",
-        "      printf(\"CUDA error copying to Host: %s\\n\", cudaGetErrorString(err));\n",
-        "  }\n",
-        "printf(\"result is %d. It should be 8. \\n\",c);\n",
-        "// Cleanup\n",
-        "cudaFree(d_a);\n",
-        "cudaFree(d_b);\n",
-        "cudaFree(d_c);\n",
-        "return 0;\n",
-        "}"
-      ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "result is 8. It should be 8. \n",
-            "\n"
+            "nvcc: NVIDIA (R) Cuda compiler driver\n",
+            "Copyright (c) 2005-2019 NVIDIA Corporation\n",
+            "Built on Sun_Jul_28_19:07:16_PDT_2019\n",
+            "Cuda compilation tools, release 10.1, V10.1.243\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P76vV0IlDlZd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "9758dd94-79c3-4722-97dd-88a888e15656"
+      },
+      "source": [
+        "!pip install git+git://github.com/andreinechaev/nvcc4jupyter.git\n",
+        "%load_ext nvcc_plugin"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting git+git://github.com/andreinechaev/nvcc4jupyter.git\n",
+            "  Cloning git://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-qifetkzq\n",
+            "  Running command git clone -q git://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-qifetkzq\n",
+            "Building wheels for collected packages: NVCCPlugin\n",
+            "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-cp36-none-any.whl size=4307 sha256=780ead9c17345f5d5954f19ff71bfbdc6f967b1814310ec4a0397921aa06a9eb\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-ik8wwifl/wheels/10/c2/05/ca241da37bff77d60d31a9174f988109c61ba989e4d4650516\n",
+            "Successfully built NVCCPlugin\n",
+            "Installing collected packages: NVCCPlugin\n",
+            "Successfully installed NVCCPlugin-0.0.2\n",
+            "created output directory at /content/src\n",
+            "Out bin /content/result.out\n"
           ],
           "name": "stdout"
         }
