--- a/nvidia_setup.ipynb
+++ b/nvidia_setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJt0G6mM27O8LJib6Wa0nz",
+      "authorship_tag": "ABX9TyOwiI1qQhkgTtctlP2/Lsv0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,31 +60,92 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 204
         },
-        "outputId": "9758dd94-79c3-4722-97dd-88a888e15656"
+        "outputId": "09b6b0cc-4434-4860-cd73-dd81b627ea0a"
       },
       "source": [
         "!pip install git+git://github.com/andreinechaev/nvcc4jupyter.git\n",
         "%load_ext nvcc_plugin"
       ],
-      "execution_count": 2,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting git+git://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning git://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-qifetkzq\n",
-            "  Running command git clone -q git://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-qifetkzq\n",
+            "  Cloning git://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-p99hrouv\n",
+            "  Running command git clone -q git://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-p99hrouv\n",
+            "Requirement already satisfied (use --upgrade to upgrade): NVCCPlugin==0.0.2 from git+git://github.com/andreinechaev/nvcc4jupyter.git in /usr/local/lib/python3.6/dist-packages\n",
             "Building wheels for collected packages: NVCCPlugin\n",
             "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-cp36-none-any.whl size=4307 sha256=780ead9c17345f5d5954f19ff71bfbdc6f967b1814310ec4a0397921aa06a9eb\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-ik8wwifl/wheels/10/c2/05/ca241da37bff77d60d31a9174f988109c61ba989e4d4650516\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-cp36-none-any.whl size=4307 sha256=574b9fceed1447ea288f9446ef1ce4f4f7d4c137ba7ea14017d5d1520f78bccc\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-z80e_3zk/wheels/10/c2/05/ca241da37bff77d60d31a9174f988109c61ba989e4d4650516\n",
             "Successfully built NVCCPlugin\n",
-            "Installing collected packages: NVCCPlugin\n",
-            "Successfully installed NVCCPlugin-0.0.2\n",
-            "created output directory at /content/src\n",
-            "Out bin /content/result.out\n"
+            "The nvcc_plugin extension is already loaded. To reload it, use:\n",
+            "  %reload_ext nvcc_plugin\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9pI9sI1QFMk7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "3c2d619a-4540-4fca-9d4f-5b63870de141"
+      },
+      "source": [
+        "%%cu\n",
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "__global__ void add(int *a, int *b, int *c) {\n",
+        "*c = *a + *b;\n",
+        "}\n",
+        "int main() {\n",
+        "int a, b, c;\n",
+        "// host copies of variables a, b & c\n",
+        "int *d_a, *d_b, *d_c;\n",
+        "// device copies of variables a, b & c\n",
+        "int size = sizeof(int);\n",
+        "// Allocate space for device copies of a, b, c\n",
+        "cudaMalloc((void **)&d_a, size);\n",
+        "cudaMalloc((void **)&d_b, size);\n",
+        "cudaMalloc((void **)&d_c, size);\n",
+        "// Setup input values  \n",
+        "c = 0;\n",
+        "a = 3;\n",
+        "b = 5;\n",
+        "// Copy inputs to device\n",
+        "cudaMemcpy(d_a, &a, size, cudaMemcpyHostToDevice);\n",
+        "  cudaMemcpy(d_b, &b, size, cudaMemcpyHostToDevice);\n",
+        "// Launch add() kernel on GPU\n",
+        "add<<<1,1>>>(d_a, d_b, d_c);\n",
+        "// Copy result back to host\n",
+        "cudaError err = cudaMemcpy(&c, d_c, size, cudaMemcpyDeviceToHost);\n",
+        "  if(err!=cudaSuccess) {\n",
+        "      printf(\"CUDA error copying to Host: %s\\n\", cudaGetErrorString(err));\n",
+        "  }\n",
+        "printf(\"result is %d. It should be %d. \\n\",c, a+b);\n",
+        "// Cleanup\n",
+        "cudaFree(d_a);\n",
+        "cudaFree(d_b);\n",
+        "cudaFree(d_c);\n",
+        "return 0;\n",
+        "}"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "result is 8. It should be 8. \n",
+            "\n"
           ],
           "name": "stdout"
         }
