--- a/cs179_lec2.ipynb
+++ b/cs179_lec2.ipynb
@@ -6,7 +6,7 @@
       "name": "cs179_lec2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOH/2TB3xae5hkuItq9RTPN",
+      "authorship_tag": "ABX9TyOuF8hEvTxaeTjmedrHC5DB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,19 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/siavashadpey/gpu_intro/blob/master/cs179_lec2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5sQl_2XQP4e_",
+        "colab_type": "text"
+      },
+      "source": [
+        "A simple kernel for vector addition (c = a + b)\n",
+        "\n",
+        "From lecture 2 of CS179 (http://courses.cms.caltech.edu/cs179/2020_lectures/cs179_2020_lec02.pdf)\n",
+        "\n"
       ]
     },
     {
@@ -146,68 +159,6 @@
           "output_type": "stream",
           "text": [
             "All is good!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "408-M5iTNYH2",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "a008ad80-c889-4fdb-bb17-910c561333c5"
-      },
-      "source": [
-        "%%cu\n",
-        "#include <stdio.h>\n",
-        "#include <stdlib.h>\n",
-        "__global__ void add(int *a, int *b, int *c) {\n",
-        "*c = *a + *b;\n",
-        "}\n",
-        "int main() {\n",
-        "int a, b, c;\n",
-        "// host copies of variables a, b & c\n",
-        "int *d_a, *d_b, *d_c;\n",
-        "// device copies of variables a, b & c\n",
-        "int size = sizeof(int);\n",
-        "// Allocate space for device copies of a, b, c\n",
-        "cudaMalloc((void **)&d_a, size);\n",
-        "cudaMalloc((void **)&d_b, size);\n",
-        "cudaMalloc((void **)&d_c, size);\n",
-        "// Setup input values  \n",
-        "c = 0;\n",
-        "a = 3;\n",
-        "b = 5;\n",
-        "// Copy inputs to device\n",
-        "cudaMemcpy(d_a, &a, size, cudaMemcpyHostToDevice);\n",
-        "  cudaMemcpy(d_b, &b, size, cudaMemcpyHostToDevice);\n",
-        "// Launch add() kernel on GPU\n",
-        "add<<<1,1>>>(d_a, d_b, d_c);\n",
-        "// Copy result back to host\n",
-        "cudaError err = cudaMemcpy(&c, d_c, size, cudaMemcpyDeviceToHost);\n",
-        "  if(err!=cudaSuccess) {\n",
-        "      printf(\"CUDA error copying to Host: %s\\n\", cudaGetErrorString(err));\n",
-        "  }\n",
-        "printf(\"result is %d. It should be %d. \\n\",c, a+b);\n",
-        "// Cleanup\n",
-        "cudaFree(d_a);\n",
-        "cudaFree(d_b);\n",
-        "cudaFree(d_c);\n",
-        "return 0;\n",
-        "}"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "result is 8. It should be 8. \n",
-            "\n"
           ],
           "name": "stdout"
         }
