--- a/cs179.ipynb
+++ b/cs179.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cs179.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnIJFZWxV9ffSSgfQw/Q6w",
+      "authorship_tag": "ABX9TyNKng5rFzPyHxPhOopP4+78",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -635,12 +635,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "4d78c588-186d-4133-f104-bc1103cd8fe1"
+        "outputId": "f6dd2d9d-de7c-4178-cc34-4039f6ed6c88"
       },
       "source": [
         "!make -B"
       ],
-      "execution_count": 85,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,12 +763,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "f892c8cb-0899-498d-b50b-9e1c2d1fa7df"
+        "outputId": "6fb23dbf-31e8-4fdd-9321-af53960b5a8e"
       },
       "source": [
-        "!./bin/dense-neuralnet --dir ./data --act tanh"
+        "!./bin/dense-neuralnet --dir ./data --act relu"
       ],
-      "execution_count": 86,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,103 +783,103 @@
             "Predicting on 10 classes.\n",
             "Epoch 1\n",
             "--------------------------------------------------------------\n",
-            "Loss: -2.24065,\tAccuracy: 0.1772\n",
+            "Loss: 1.52806,\tAccuracy: 0.536267\n",
             "\n",
             "Epoch 2\n",
             "--------------------------------------------------------------\n",
-            "Loss: -1.74853,\tAccuracy: 0.435833\n",
+            "Loss: 0.553152,\tAccuracy: 0.852467\n",
             "\n",
             "Epoch 3\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.961243,\tAccuracy: 0.760933\n",
+            "Loss: 0.427549,\tAccuracy: 0.881533\n",
             "\n",
             "Epoch 4\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.589103,\tAccuracy: 0.852966\n",
+            "Loss: 0.382462,\tAccuracy: 0.8926\n",
             "\n",
             "Epoch 5\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.455563,\tAccuracy: 0.88075\n",
+            "Loss: 0.358395,\tAccuracy: 0.898283\n",
             "\n",
             "Epoch 6\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.391775,\tAccuracy: 0.894133\n",
+            "Loss: 0.342891,\tAccuracy: 0.902433\n",
             "\n",
             "Epoch 7\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.355163,\tAccuracy: 0.9021\n",
+            "Loss: 0.331855,\tAccuracy: 0.90585\n",
             "\n",
             "Epoch 8\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.331032,\tAccuracy: 0.907717\n",
+            "Loss: 0.323487,\tAccuracy: 0.908\n",
             "\n",
             "Epoch 9\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.313336,\tAccuracy: 0.911983\n",
+            "Loss: 0.316856,\tAccuracy: 0.910016\n",
             "\n",
             "Epoch 10\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.299314,\tAccuracy: 0.9162\n",
+            "Loss: 0.311419,\tAccuracy: 0.911567\n",
             "\n",
             "Epoch 11\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.287587,\tAccuracy: 0.91875\n",
+            "Loss: 0.306834,\tAccuracy: 0.9132\n",
             "\n",
             "Epoch 12\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.277405,\tAccuracy: 0.921566\n",
+            "Loss: 0.302873,\tAccuracy: 0.913983\n",
             "\n",
             "Epoch 13\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.268339,\tAccuracy: 0.924217\n",
+            "Loss: 0.299374,\tAccuracy: 0.914833\n",
             "\n",
             "Epoch 14\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.260123,\tAccuracy: 0.926216\n",
+            "Loss: 0.296199,\tAccuracy: 0.915933\n",
             "\n",
             "Epoch 15\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.252588,\tAccuracy: 0.928383\n",
+            "Loss: 0.293252,\tAccuracy: 0.916817\n",
             "\n",
             "Epoch 16\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.245617,\tAccuracy: 0.930683\n",
+            "Loss: 0.290457,\tAccuracy: 0.917866\n",
             "\n",
             "Epoch 17\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.239124,\tAccuracy: 0.932267\n",
+            "Loss: 0.287752,\tAccuracy: 0.918717\n",
             "\n",
             "Epoch 18\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.233047,\tAccuracy: 0.934133\n",
+            "Loss: 0.285123,\tAccuracy: 0.919533\n",
             "\n",
             "Epoch 19\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.227337,\tAccuracy: 0.935833\n",
+            "Loss: 0.282568,\tAccuracy: 0.920517\n",
             "\n",
             "Epoch 20\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.221955,\tAccuracy: 0.937467\n",
+            "Loss: 0.28006,\tAccuracy: 0.921317\n",
             "\n",
             "Epoch 21\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.216871,\tAccuracy: 0.93905\n",
+            "Loss: 0.277546,\tAccuracy: 0.922033\n",
             "\n",
             "Epoch 22\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.212057,\tAccuracy: 0.940333\n",
+            "Loss: 0.275021,\tAccuracy: 0.922883\n",
             "\n",
             "Epoch 23\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.207492,\tAccuracy: 0.941783\n",
+            "Loss: 0.272474,\tAccuracy: 0.923533\n",
             "\n",
             "Epoch 24\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.203155,\tAccuracy: 0.943033\n",
+            "Loss: 0.269875,\tAccuracy: 0.924383\n",
             "\n",
             "Epoch 25\n",
             "--------------------------------------------------------------\n",
-            "Loss: -0.199029,\tAccuracy: 0.944217\n",
+            "Loss: 0.267228,\tAccuracy: 0.92535\n",
             "\n",
             "Image Magic        :803                            2051\n",
             "Image Count        :2710                           10000\n",
@@ -890,7 +890,7 @@
             "Loaded test set.\n",
             "Validation\n",
             "----------------------------------------------------\n",
-            "Loss: -0.197192,\tAccuracy: 0.9427\n",
+            "Loss: 0.267661,\tAccuracy: 0.9244\n",
             "\n"
           ],
           "name": "stdout"
