--- a/cs179.ipynb
+++ b/cs179.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cs179.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKng5rFzPyHxPhOopP4+78",
+      "authorship_tag": "ABX9TyMa/JxVko6j0xj9eWGMBR2W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "!export LD_LIBRARY_PATH=/usr/local/cuda-10.1/lib64\n",
         "!export LIBRARY_PATH=$LIBRARY_PATH:/usr/local/cuda-10.1/lib64"
       ],
-      "execution_count": 69,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "source": [
         "!./noaudio-blur 512 200"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
       "source": [
         "!./audio-blur 512 200 ./resources/example_test.wav ./resources/example_test_out.wav"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
       "source": [
         "!./transpose"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
       "source": [
         "!./noaudio-fft 512 200"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +462,7 @@
       "source": [
         "!./audio-fft 512 200 resources/example_testfile.wav resources/silo_small.wav resources/examples_testfile_silo_out.wav"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
       "source": [
         "%mkdir bin obj"
       ],
-      "execution_count": 73,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -583,12 +583,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "6fb23dbf-31e8-4fdd-9321-af53960b5a8e"
+        "outputId": "d2ada073-9e71-4029-fb8e-ff70ff065241"
       },
       "source": [
         "!./bin/dense-neuralnet --dir ./data --act relu"
       ],
-      "execution_count": 89,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,103 +603,103 @@
             "Predicting on 10 classes.\n",
             "Epoch 1\n",
             "--------------------------------------------------------------\n",
-            "Loss: 1.52806,\tAccuracy: 0.536267\n",
+            "Loss: 1.52392,\tAccuracy: 0.535617\n",
             "\n",
             "Epoch 2\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.553152,\tAccuracy: 0.852467\n",
+            "Loss: 0.55275,\tAccuracy: 0.851617\n",
             "\n",
             "Epoch 3\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.427549,\tAccuracy: 0.881533\n",
+            "Loss: 0.426719,\tAccuracy: 0.8814\n",
             "\n",
             "Epoch 4\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.382462,\tAccuracy: 0.8926\n",
+            "Loss: 0.38124,\tAccuracy: 0.892716\n",
             "\n",
             "Epoch 5\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.358395,\tAccuracy: 0.898283\n",
+            "Loss: 0.357169,\tAccuracy: 0.898466\n",
             "\n",
             "Epoch 6\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.342891,\tAccuracy: 0.902433\n",
+            "Loss: 0.341784,\tAccuracy: 0.902767\n",
             "\n",
             "Epoch 7\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.331855,\tAccuracy: 0.90585\n",
+            "Loss: 0.330872,\tAccuracy: 0.905633\n",
             "\n",
             "Epoch 8\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.323487,\tAccuracy: 0.908\n",
+            "Loss: 0.322587,\tAccuracy: 0.9082\n",
             "\n",
             "Epoch 9\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.316856,\tAccuracy: 0.910016\n",
+            "Loss: 0.315974,\tAccuracy: 0.909933\n",
             "\n",
             "Epoch 10\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.311419,\tAccuracy: 0.911567\n",
+            "Loss: 0.310498,\tAccuracy: 0.91175\n",
             "\n",
             "Epoch 11\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.306834,\tAccuracy: 0.9132\n",
+            "Loss: 0.305845,\tAccuracy: 0.91315\n",
             "\n",
             "Epoch 12\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.302873,\tAccuracy: 0.913983\n",
+            "Loss: 0.301803,\tAccuracy: 0.91435\n",
             "\n",
             "Epoch 13\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.299374,\tAccuracy: 0.914833\n",
+            "Loss: 0.298226,\tAccuracy: 0.915334\n",
             "\n",
             "Epoch 14\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.296199,\tAccuracy: 0.915933\n",
+            "Loss: 0.295016,\tAccuracy: 0.916234\n",
             "\n",
             "Epoch 15\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.293252,\tAccuracy: 0.916817\n",
+            "Loss: 0.292101,\tAccuracy: 0.917216\n",
             "\n",
             "Epoch 16\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.290457,\tAccuracy: 0.917866\n",
+            "Loss: 0.289408,\tAccuracy: 0.917966\n",
             "\n",
             "Epoch 17\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.287752,\tAccuracy: 0.918717\n",
+            "Loss: 0.286894,\tAccuracy: 0.919033\n",
             "\n",
             "Epoch 18\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.285123,\tAccuracy: 0.919533\n",
+            "Loss: 0.284531,\tAccuracy: 0.91965\n",
             "\n",
             "Epoch 19\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.282568,\tAccuracy: 0.920517\n",
+            "Loss: 0.282284,\tAccuracy: 0.920383\n",
             "\n",
             "Epoch 20\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.28006,\tAccuracy: 0.921317\n",
+            "Loss: 0.280131,\tAccuracy: 0.9209\n",
             "\n",
             "Epoch 21\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.277546,\tAccuracy: 0.922033\n",
+            "Loss: 0.278035,\tAccuracy: 0.921583\n",
             "\n",
             "Epoch 22\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.275021,\tAccuracy: 0.922883\n",
+            "Loss: 0.275991,\tAccuracy: 0.922367\n",
             "\n",
             "Epoch 23\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.272474,\tAccuracy: 0.923533\n",
+            "Loss: 0.273984,\tAccuracy: 0.922933\n",
             "\n",
             "Epoch 24\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.269875,\tAccuracy: 0.924383\n",
+            "Loss: 0.271984,\tAccuracy: 0.9235\n",
             "\n",
             "Epoch 25\n",
             "--------------------------------------------------------------\n",
-            "Loss: 0.267228,\tAccuracy: 0.92535\n",
+            "Loss: 0.269999,\tAccuracy: 0.924133\n",
             "\n",
             "Image Magic        :803                            2051\n",
             "Image Count        :2710                           10000\n",
@@ -710,7 +710,150 @@
             "Loaded test set.\n",
             "Validation\n",
             "----------------------------------------------------\n",
-            "Loss: 0.267661,\tAccuracy: 0.9244\n",
+            "Loss: 0.271615,\tAccuracy: 0.9226\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kJyJDMCrdYzQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "34967543-2b66-4497-f04c-b162ec44a13f"
+      },
+      "source": [
+        "!./bin/conv-neuralnet --dir ./data --act relu"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Image Magic        :803                            2051\n",
+            "Image Count        :EA60                           60000\n",
+            "Image Rows         :1C                              28\n",
+            "Image Columns      :1C                              28\n",
+            "Label Magic        :801                            2049\n",
+            "Label Count        :EA60                           60000\n",
+            "Loaded training set.\n",
+            "Predicting on 10 classes.\n",
+            "Epoch 1\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 1.17517,\tAccuracy: 0.635117\n",
+            "\n",
+            "Epoch 2\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.519491,\tAccuracy: 0.837933\n",
+            "\n",
+            "Epoch 3\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.424472,\tAccuracy: 0.869333\n",
+            "\n",
+            "Epoch 4\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.366386,\tAccuracy: 0.888049\n",
+            "\n",
+            "Epoch 5\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.311792,\tAccuracy: 0.906217\n",
+            "\n",
+            "Epoch 6\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.264777,\tAccuracy: 0.920967\n",
+            "\n",
+            "Epoch 7\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.228531,\tAccuracy: 0.931366\n",
+            "\n",
+            "Epoch 8\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.20092,\tAccuracy: 0.9401\n",
+            "\n",
+            "Epoch 9\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.179793,\tAccuracy: 0.946066\n",
+            "\n",
+            "Epoch 10\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.163428,\tAccuracy: 0.951133\n",
+            "\n",
+            "Epoch 11\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.150567,\tAccuracy: 0.954834\n",
+            "\n",
+            "Epoch 12\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.140282,\tAccuracy: 0.95795\n",
+            "\n",
+            "Epoch 13\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.131963,\tAccuracy: 0.9607\n",
+            "\n",
+            "Epoch 14\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.124957,\tAccuracy: 0.962867\n",
+            "\n",
+            "Epoch 15\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.118952,\tAccuracy: 0.964534\n",
+            "\n",
+            "Epoch 16\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.113716,\tAccuracy: 0.965967\n",
+            "\n",
+            "Epoch 17\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.109064,\tAccuracy: 0.967334\n",
+            "\n",
+            "Epoch 18\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.104858,\tAccuracy: 0.96865\n",
+            "\n",
+            "Epoch 19\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.101053,\tAccuracy: 0.969501\n",
+            "\n",
+            "Epoch 20\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.09758,\tAccuracy: 0.97035\n",
+            "\n",
+            "Epoch 21\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.0944067,\tAccuracy: 0.971283\n",
+            "\n",
+            "Epoch 22\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.0914837,\tAccuracy: 0.9719\n",
+            "\n",
+            "Epoch 23\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.0887756,\tAccuracy: 0.9726\n",
+            "\n",
+            "Epoch 24\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.0862631,\tAccuracy: 0.97325\n",
+            "\n",
+            "Epoch 25\n",
+            "--------------------------------------------------------------\n",
+            "Loss: 0.0839859,\tAccuracy: 0.974084\n",
+            "\n",
+            "Image Magic        :803                            2051\n",
+            "Image Count        :2710                           10000\n",
+            "Image Rows         :1C                              28\n",
+            "Image Columns      :1C                              28\n",
+            "Label Magic        :801                            2049\n",
+            "Label Count        :2710                           10000\n",
+            "Loaded test set.\n",
+            "Validation\n",
+            "----------------------------------------------------\n",
+            "Loss: 0.0797142,\tAccuracy: 0.9755\n",
             "\n"
           ],
           "name": "stdout"
